--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,12 +52,9 @@ dependencies:
   flutter_svg: 2.0.6
   cached_network_image: ^3.3.1
   image_picker: 0.8.7+5
-
-
-
   flutter_dotenv: 5.0.2
-
   wc_form_validators: 1.0.0
+  appflowy_board: ^0.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -85,8 +82,8 @@ flutter:
   generate: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - config/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
